# decouple_flash_attention

./: CMakeLists.txt
include/: attention.h  bit_move_detector.h  cuda_check.h  flash_fwd_launch_template.h  rand_generator.h  run_fwd_template.h  simple_tensor.h  utils.h
include/profile/: time_profile.h
src/: attention.h  copy_test.cu  main.cu  mma_compare.cu  mma_example.cu  tensor_reorganize.cu  tile_copy_test.cu
